fix footer clipping

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,6 @@
 
 body { 
     margin: 0; 
-    margin-bottom: 15px;
+    margin-bottom: 70px;
     font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
